# sourcepile

./: .gitignore  Cargo.toml  readme.md
src/: cli.rs  filter.rs  formatter.rs  main.rs  walker.rs
